[gd_scene load_steps=19 format=2]

[ext_resource path="res://prefabs/Comp.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sounds/Ambient Hum Pitched.mp3" type="AudioStream" id=2]
[ext_resource path="res://Scenes/NewMenu.gd" type="Script" id=3]
[ext_resource path="res://Sounds/beep.mp3" type="AudioStream" id=4]
[ext_resource path="res://Textures/TerminalMenuTexture.png" type="Texture" id=5]
[ext_resource path="res://Textures/hover.png" type="Texture" id=6]
[ext_resource path="res://Materials/DarkWood.tres" type="Material" id=7]
[ext_resource path="res://Materials/LightConcrete.tres" type="Material" id=8]
[ext_resource path="res://prefabs/Flasher.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/FL.glb" type="PackedScene" id=10]
[ext_resource path="res://prefabs/motiondetector.tscn" type="PackedScene" id=11]

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Comp/Viewport")

[sub_resource type="SpatialMaterial" id=4]
resource_local_to_scene = true
albedo_texture = SubResource( 3 )

[sub_resource type="Environment" id=1]
background_mode = 2
background_energy = 0.0
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0

[sub_resource type="PlaneMesh" id=5]

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("Spatial/motiondetector/Viewport")

[sub_resource type="SpatialMaterial" id=7]
resource_local_to_scene = true
albedo_texture = SubResource( 6 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="Comp" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.0452264, 0, -0.0213205, 0, 0.05, 0, 0.0213205, 0, 0.0452264, -0.571, 0.063, 0.0998765 )

[node name="OmniLight" parent="Comp" index="0"]
light_energy = 0.3
omni_range = 0.5

[node name="OmniLight2" parent="Comp" index="1"]
light_color = Color( 0.560784, 0.94902, 0.494118, 1 )
light_energy = 1.026
omni_range = 1.0

[node name="MeshInstance" type="MeshInstance" parent="Comp"]
transform = Transform( 0, -0.996195, -0.244036, 5.96046e-08, 0.0871558, -2.78935, 4.5, -5.96046e-08, 0, -3.10828, 5.83851, 0.119469 )
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="Comp"]
size = Vector2( 1920, 1080 )
render_target_v_flip = true

[node name="TextureRect" type="TextureRect" parent="Comp/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="TerminalMenuTexture" type="Sprite" parent="Comp/Viewport/TextureRect"]
position = Vector2( 964, 541 )
texture = ExtResource( 5 )

[node name="hover1" type="TextureRect" parent="Comp/Viewport"]
margin_left = 780.0
margin_top = 415.0
margin_right = 1446.0
margin_bottom = 815.0
rect_scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 6 )

[node name="hover2" type="TextureRect" parent="Comp/Viewport"]
margin_left = 780.0
margin_top = 555.0
margin_right = 1446.0
margin_bottom = 955.0
rect_scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 6 )

[node name="hover3" type="TextureRect" parent="Comp/Viewport"]
margin_left = 780.0
margin_top = 695.0
margin_right = 1446.0
margin_bottom = 1095.0
rect_scale = Vector2( 0.55, 0.5 )
texture = ExtResource( 6 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.55288, 0.261802, -0.190368 )
fov = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Audios" type="Node" parent="."]

[node name="Ambient1" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource( 2 )
volume_db = 10.0
autoplay = true

[node name="Beep" type="AudioStreamPlayer" parent="Audios"]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="Wall" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 2, 1.04942, 0.242262, -0.204398 )
mesh = SubResource( 5 )
material/0 = ExtResource( 8 )

[node name="Wall2" type="MeshInstance" parent="."]
transform = Transform( 1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0.0556304, 0.242262, -1.54572 )
mesh = SubResource( 5 )
material/0 = ExtResource( 8 )

[node name="Wall3" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.666442, -0.0731105, 0.0600747 )
mesh = SubResource( 5 )
material/0 = ExtResource( 7 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.2733, 0 )

[node name="FL" parent="." instance=ExtResource( 10 )]
transform = Transform( 0.0852366, 0, 0.0522945, 0, 0.1, 0, -0.0522945, 0, 0.0852366, -0.494488, -0.0361145, -0.654633 )

[node name="Flasher" parent="." instance=ExtResource( 9 )]
transform = Transform( -0.147011, 0, 0.261511, 0, 0.3, 0, -0.261511, 0, -0.147011, -0.286788, 0, -0.767384 )

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.159941, 0.0304848, -0.439173 )

[node name="motiondetector" parent="Spatial" instance=ExtResource( 11 )]
transform = Transform( -0.0287661, 0, -0.0957732, 0, 0.1, 0, 0.0957732, 0, -0.0287661, 0, 0, 0 )

[node name="OmniLight" parent="Spatial/motiondetector" index="0"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0.721611 )

[node name="MeshInstance" parent="Spatial/motiondetector" index="6"]
transform = Transform( 1.8, 0, 0, 0, 1.4, 0, 8.9407e-08, 0, 1, 2.38419e-07, 0.22171, 0.135921 )
material/0 = SubResource( 7 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
extents = Vector3( 2.32887, 2.90967, 2.46272 )

[editable path="Comp"]
[editable path="Spatial/motiondetector"]
